# ddes-smart-meter-app

./: Docker.md  README.md  buildInstructions.md
alerts/: README.md  bun.lockb  package.json
alerts/src/: rabbitClient.ts
billing-service/: billing-service-compose.yaml  build.gradle.kts  dockerfile  k8s-billing-service.yaml
billing-service/src/main/java/com/smartmeter/billing_service/: BillingServiceApplication.java
billing-service/src/main/resources/: application-prod.properties  application.properties
client/: .gitignore  Dockerfile.client  Dockerfile.server  README.md  bun.lockb  docker-compose.yml  nginx.conf  package.json
client/apps/client/: README.md  bun.lockb  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
client/apps/client/config/: config.yml
client/apps/client/src/: App.vue  main.ts
client/apps/client/src/assets/: main.css
client/apps/client/src/component/: Header.vue
client/apps/client/src/component/charts/: BarChart.vue  DoughnutChart.vue  HorizontalBarChart.vue  LineChart.vue
client/apps/client/src/component/modals/: Modals.vue
client/apps/client/src/config/: config.ts
client/apps/client/src/router/: index.ts
client/apps/client/src/stores/: auth.ts  dataServer.ts  modals.ts  socketio.ts
client/apps/client/src/themes/: theme.ts
client/apps/client/src/types/: index.ts
client/apps/client/src/views/: DashBoard.vue  HistoricalDashBoard.vue  Login.vue
client/apps/server/: README.md  package.json  tsconfig.json
client/apps/server/config/: config.json
client/apps/server/src/: env.ts  index.ts
client/apps/server/src/client/: NetworkClient.ts  reciever.ts  webSocket.ts  webSocketClass.ts
client/apps/server/src/components/: rabbitClient.ts  randomNumberGen.ts
client/apps/server/src/config/: config.ts
client/apps/server/src/types/: index.ts
client/apps/server/src/utils/: hmac.ts  rabbitClient.ts  userValidation.ts
client/apps/server/src/utils/test/: HMAC.test.ts  RandomNumberGen.test.ts  UserValidation.test.ts
client/docker/: Dockerfile.backend  Dockerfile.client  Dockerfile.server  docker-compose.yml  nginx.conf
client/docker/Notes/: BuildNotes.md
client/server/: bun.lockb
client/server/src/types/: message.ts
client/src/: env.ts  index.ts  rabbitClient.ts  reciever.ts
client/src/client/: reciever.ts
client/src/components/: hmac.ts  rabbitClient.ts  randomNumberGen.ts
client/src/types/: env.ts  message.ts
deploy/: docker-compose.yml
deployment/: docker-compose.yml
gateway/: .gitignore  README.md  __init__.py  alert_service.py  app.py  docker-compose.local.yml  docker-compose.yml  logging.yaml  publisher.py  requirements.txt  settings.py  test-docker-compose.yml  udp_server.py  validation.py
gateway/tests/: test_integration_rabbit.py  test_publisher.py  test_validation.py
ingestion/: .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  cmake_install.cmake  docker-compose.yml
ingestion/src/: CMakeLists.txt  env-vars.c  hmac-verify.c  idempotency.c  ingestion.c  ingestion.conf  ingestion.h  json-obj-validation.c  logging.c  rabbitmq-comms.c  read-config.c  support-functions.c  types.h
ingestion/tests/: CMakeLists.txt  env-vars.c  hmac-verify.c  idempotency.c  json-obj-validation.c  rabbitmq-comms.c  read-config.c  tests.c  tests.h
rabbitmq/: docker-compose.yml
(+59 files in other folders)
